--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       - NODE_ENV=production
       - MONGO_URI=${MONGO_URI:-mongodb://mongo:27017/shared_experiences}
       - FRONTEND_ORIGIN=${FRONTEND_ORIGIN:-http://localhost:5173}
+      - NEO4J_ENABLE=${NEO4J_ENABLE:-false}
     ports:
       - "4000:4000"
     depends_on:
