--- a/default.conf
+++ b/default.conf
@@ -1,20 +1,33 @@
+upstream backend_api {
+  server backend:4000;
+}
+
 server {
   listen 80;
   server_name _;
 
-  root /usr/share/nginx/html;
-  index index.html;
+  # Serve built frontend from the frontend container via Docker network
+  location / {
+    proxy_pass http://frontend;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  # Proxy API calls to backend
+  location /api/ {
+    proxy_pass http://backend_api;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
 
   gzip on;
   gzip_types text/plain text/css application/json application/javascript application/xml+rss application/xml image/svg+xml;
   gzip_min_length 1024;
-
-  location = /robots.txt { }
-  location = /sitemap.xml { }
-
-  location / {
-    try_files $uri /index.html;
-  }
 }
 
 
