--- a/default.conf
+++ b/default.conf
@@ -1,33 +1,34 @@
-upstream backend_api {
-  server backend:4000;
-}
-
+# Redirect HTTP to HTTPS
 server {
   listen 80;
-  server_name _;
-
-  # Serve built frontend from the frontend container via Docker network
-  location / {
-    proxy_pass http://frontend;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
-
-  # Proxy API calls to backend
-  location /api/ {
-    proxy_pass http://backend_api;
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
-
-  gzip on;
-  gzip_types text/plain text/css application/json application/javascript application/xml+rss application/xml image/svg+xml;
-  gzip_min_length 1024;
+  listen [::]:80;
+  server_name aeternyug.com;
+  return 301 https://aeternyug.com$request_uri;
 }
 
+# HTTPS server block
+server {
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
+  server_name aeternyug.com;
 
+  ssl_certificate /etc/letsencrypt/live/aeternyug.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/aeternyug.com/privkey.pem;
+
+  # Your existing proxy configuration
+  location / {
+    proxy_pass http://frontend:80;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  location /api/ {
+    proxy_pass http://backend:3000;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+}
