--- a/default.conf
+++ b/default.conf
@@ -1,22 +1,34 @@
+# Redirect HTTP to HTTPS
 server {
-    listen 80;
-    listen [::]:80;
-    server_name aeternyug.com;
-    
-    location / {
-        return 200 "<h1>HTTP is Working!</h1>";
-    }
+  listen 80;
+  listen [::]:80;
+  server_name aeternyug.com;
+  return 301 https://aeternyug.com$request_uri;
 }
 
+# HTTPS server block
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name aeternyug.com;
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
+  server_name aeternyug.com;
 
-    ssl_certificate /etc/letsencrypt/live/aeternyug.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/aeternyug.com/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/aeternyug.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/aeternyug.com/privkey.pem;
 
-    location / {
-        return 200 "<h1>HTTPS is Working!</h1>";
-    }
+  # Your existing proxy configuration
+  location / {
+    proxy_pass http://frontend:80;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  location /api/ {
+    proxy_pass http://backend:3000;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
 }
